<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignInActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imageLogo1"
        android:transitionName="Logo_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/ImageText" />

    <TextView
        android:id="@+id/textLogo1"
        android:transitionName="Logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bowlby_one_sc"
        android:textColor="@color/purple_500"
        android:text="@string/Welcome"
        android:textSize="32sp"/>


    <TextView
        android:id="@+id/descText"
        android:transitionName="Desc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/SingIn_text"
        android:textColor="@color/purple_200"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/UserName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/UserName">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:transitionName="UserName">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PassWord"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:transitionName="PassWord"
                android:inputType="textPassword">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:textColor="@color/black"
            android:elevation="0dp"
            android:text="@string/forget_password" />

        <Button
            android:id="@+id/SignIn"
            android:transitionName="SignButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/purple_500"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/SignUp"
            android:transitionName="SignButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#00000000"
            android:textColor="@color/black"
            android:text="@string/new_user_sign_up"
            tools:ignore="OnClick" />


    </LinearLayout>

</LinearLayout>