<?xml version="1.0" encoding="utf-8"?>
<com.example.comeupon.eventHomeList.MapCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    card_view:cardCornerRadius="10dp">


    <LinearLayout
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/event_item_title"
            android:transitionName="Logo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/app_name"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp"/>

        <com.google.android.gms.maps.MapView
            android:id="@+id/event_item_map"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/todo"
                android:src="@mipmap/logo" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/todo"
                android:src="@mipmap/logo" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/todo"
                android:src="@mipmap/logo" />

            <RelativeLayout
                android:paddingEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/event_item_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="4dp"
                    android:layout_toStartOf="@+id/event_item_date"
                    android:textColor="@color/black"
                    android:padding="8dp"
                    android:text="@string/EventHour" />

                <TextView
                    android:id="@+id/event_item_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="end"
                    android:background="@drawable/date_shape"
                    android:elevation="2dp"
                    android:padding="8dp"
                    android:shadowColor="@color/purple_200"
                    android:text="@string/EventDate" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</com.example.comeupon.eventHomeList.MapCardView>