<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".eventHomeList.EventListActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    android:id="@+id/drawer_layout">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu"/>

    <LinearLayout
        android:id="@+id/content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_baseline_menu_24"
                android:padding="5dp"
                android:contentDescription="@string/todo"
                android:layout_centerVertical="true"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="40dp"
                android:src="@drawable/ic_baseline_notifications_24"
                android:contentDescription="@string/todo"
                android:layout_centerVertical="true"/>

            <ImageView
                android:id="@+id/add_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:src="@drawable/ic_baseline_add_24"
                android:contentDescription="@string/todo"
                android:layout_centerVertical="true"
                tools:ignore="OnClick" />

        </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/appName"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/date_shape"
                android:backgroundTint="@color/purple_200"
                android:elevation="15dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_baseline_search_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:text="@string/search_text"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/app_name"
                android:textSize="24sp" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/card_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>