<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".event.EventActivity"
    app:umanoDragView="@id/drag_view"
    app:umanoScrollableView="@id/event_list_participant"
    android:background="@drawable/drawable_round_background"
    android:gravity="bottom">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:id="@+id/event_image"
                android:contentDescription="@string/todo" />

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="-40dp"
                android:layout_marginStart="20dp"
                app:cardCornerRadius="40dp">
                <ImageView
                    android:id="@+id/event_image_owner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@color/teal_200"
                    android:contentDescription="@string/todo" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/event_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/UserName"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                android:layout_marginTop="-35dp"
                android:layout_marginStart="110dp"/>

            <RelativeLayout
                android:layout_marginTop="15dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/event_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abril_fatface"
                    android:layout_centerVertical="true"
                    android:textColor="@color/purple_500"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/event_timeStartEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="4dp"
                    android:layout_toStartOf="@+id/event_timeMonth"
                    android:padding="8dp"
                    android:text="@string/EventHour"
                    android:textColor="@color/black"
                    tools:ignore="RelativeOverlap" />
                <TextView
                    android:id="@+id/event_timeMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="end"
                    android:background="@drawable/date_shape"
                    android:elevation="2dp"
                    android:padding="8dp"
                    android:shadowColor="@color/purple_200"
                    android:text="@string/EventDate"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/event_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/amethysta"
                        android:padding="8dp"
                        android:text="@string/text"
                        android:textSize="18sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/abril_fatface"
                        android:text="@string/activities"
                        android:textColor="@color/purple_500"
                        android:textSize="18sp"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="8dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/event_activities"/>

                    <fragment
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:id="@+id/event_map"
                        android:name="com.google.android.gms.maps.SupportMapFragment" />

                </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/drag_view"
        android:clickable="true"
        android:focusable="false"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout_participant"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="70dp">


            <LinearLayout
                android:id="@+id/event_participant_top_list"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/CardViewimage1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardCornerRadius="20dp"
                    android:padding="5dp"
                    android:background="@color/black"
                    android:elevation="2dp"
                    android:layout_marginStart="15dp">
                    <ImageView
                        android:id="@+id/image1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@color/teal_200"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/todo"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/CardViewimage2"
                    android:elevation="2dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardCornerRadius="20dp"
                    android:padding="5dp"
                    android:background="@color/black"
                    android:layout_marginStart="-8dp">
                    <ImageView
                        android:id="@+id/image2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@color/teal_200"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/todo"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/CardViewimage3"
                    android:elevation="2dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardCornerRadius="20dp"
                    android:padding="5dp"
                    android:background="@color/black"
                    android:layout_marginStart="-8dp">
                    <ImageView
                        android:id="@+id/image3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@color/teal_200"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/todo" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/event_list_participant_numbers"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/abril_fatface"
                    android:textColor="@color/purple_500"
                    android:textSize="16sp"
                    android:layout_marginStart="15dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/event_join_btn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/join" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/event_list_participant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/event_participant_Accepted"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/abril_fatface"
                    android:textColor="@color/purple_500"
                    android:textSize="16sp"
                    android:text="Accepted"
                    android:layout_marginStart="20dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/event_participant_recyclerview_accepted"/>

                <TextView
                    android:id="@+id/event_participant_Requests"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/abril_fatface"
                    android:textColor="@color/purple_500"
                    android:textSize="16sp"
                    android:text="Requests"
                    android:layout_marginStart="20dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/event_participant_recyclerview_requests"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</com.sothree.slidinguppanel.SlidingUpPanelLayout>